feat(server): Added endpoint to get branches/tags from a remote Git repo
